--- a/app/package.json
+++ b/app/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "bin":"index.js",
+  "bin": "index.js",
   "scripts": {
-    "build": "cosynode . ../dist --name FigmaNetOK"
+    "build": "cosynode . ../dist --name FigmaNetOK",
+    "build2": "pkg ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "chalk": "^4.1.2",
     "dns-lookup": "^0.1.0",
     "nslookup": "^1.1.1",
     "ora": "^5.4.1",
