--- a/app/package.json
+++ b/app/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "figma-net-ok",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "bin": "index.js",
-  "scripts": {
-    "build": "cosynode . ../dist --name FigmaNetOK",
-    "build2": "pkg ."
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.21.1",
-    "chalk": "^4.1.2",
-    "dns-lookup": "^0.1.0",
-    "nslookup": "^1.1.1",
-    "ora": "^5.4.1",
-    "ping": "^0.4.1"
-  }
+    "name": "figma-net-ok",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "bin": "index.js",
+    "scripts": {
+        "build": "cosynode . ../dist --name FigmaNetOK -n 12",
+        "zip": "cd ../dist/windows/  zip -q -r   ../[Windows]FigmaNetOK.zip  && zip -q -r  ../dist/[MacOS]FigmaNetOK.zip ../dist/macos/"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.21.1",
+        "chalk": "^4.1.2",
+        "dns-lookup": "^0.1.0",
+        "nslookup": "^1.1.1",
+        "ora": "^5.4.1",
+        "ping": "^0.4.1"
+    }
 }
