--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "bin": "index.js",
     "scripts": {
         "build": "cosynode . ../dist --name FigmaNetOK -n 12",
+        "run": "node ./index.js",
         "zip": "cd ../dist/windows/  zip -q -r   ../[Windows]FigmaNetOK.zip  && zip -q -r  ../dist/[MacOS]FigmaNetOK.zip ../dist/macos/"
     },
     "author": "",
@@ -14,8 +15,11 @@
         "axios": "^0.21.1",
         "chalk": "^4.1.2",
         "dns-lookup": "^0.1.0",
+        "hostile": "^1.3.3",
         "nslookup": "^1.1.1",
         "ora": "^5.4.1",
-        "ping": "^0.4.1"
+        "ping": "^0.4.1",
+        "prompts": "^2.4.2",
+        "sudo-prompt": "^9.2.1"
     }
 }
