--- a/app/package.json
+++ b/app/package.json
@@ -1,13 +1,13 @@
 {
     "name": "figma-net-ok",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "description": "",
     "main": "index.js",
     "bin": "index.js",
     "scripts": {
         "build": "cosynode . ../dist --name FigmaNetOK -n 12",
         "run": "node ./index.js",
-        "zip": "cd ../dist/windows/  zip -q -r   ../[Windows]FigmaNetOK.zip  && zip -q -r  ../dist/[MacOS]FigmaNetOK.zip ../dist/macos/"
+        "zip": "cd .. && zip -q -r ./dist/[Windows]FigmaNetOK_v2.zip ./dist/windows/  && zip -q -r ./dist/[MacOS]FigmaNetOK_v2.zip ./dist/macos/"
     },
     "author": "",
     "license": "ISC",
